// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
  id="users-page"
>
  <Suggestions
    suggestions="users"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="users.page"
  />
  <Header
    loading={true}
    onUpdateUsers={[Function]}
  />
  <Search
    query={
      {
        "search": "",
      }
    }
    updateQuery={[Function]}
  />
  <UsersList
    currentUser={
      {
        "dismissedNotices": {},
        "isLoggedIn": true,
        "login": "luke",
      }
    }
    identityProviders={[]}
    onUpdateUsers={[Function]}
    updateTokensCount={[Function]}
    users={[]}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
  id="users-page"
>
  <Suggestions
    suggestions="users"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="users.page"
  />
  <Header
    loading={false}
    onUpdateUsers={[Function]}
  />
  <Search
    query={
      {
        "search": "",
      }
    }
    updateQuery={[Function]}
  />
  <UsersList
    currentUser={
      {
        "dismissedNotices": {},
        "isLoggedIn": true,
        "login": "luke",
      }
    }
    identityProviders={
      [
        {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "foo",
          "name": "Foo Provider",
        },
      ]
    }
    onUpdateUsers={[Function]}
    updateTokensCount={[Function]}
    users={
      [
        {
          "active": true,
          "local": false,
          "login": "luke",
          "name": "Luke",
          "scmAccounts": [],
        },
      ]
    }
  />
  <ListFooter
    count={1}
    loadMore={[Function]}
    ready={true}
    total={2}
  />
</div>
`;
